--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,9 @@
     <div id="container">
         <div id="post">
             <h1>Este se el título atractivo e interesante del post</h1>
-            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>        
+            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mejor que ir a conferencias o salir en youtube. Excepto si eres un Rockstar. Pero estadísticamente no lo eres... por ahora.</p>
+            </p>        
         </div>
     </div>
 
