Agregué una imagen al blog por casualidad

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div id="container">
-        <div id="cabecera"> Hyperbl blog <span id="tagline">Tu blog de cabecera</span></div>
+        <div id="cabecera"> 
+            Hyperbl blog <span id="tagline">Tu blog de cabecera</span></div>
         <div id="post">
             <h1>Este se el título atractivo e interesante del post</h1>
             <p>Y este es el p&aacute;rrafo con inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden lograr con ramas
