--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera"> 
-            Hyperbl blog <span id="tagline">Tu blog de cabecera</span></div>
+            Hyperbl blog <span id="tagline">Tu blog de confianza</span></div>
         <div id="post">
             <h1>Este se el título atractivo e interesante del post</h1>
             <p>Y este es el p&aacute;rrafo con inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden lograr con ramas
