Commit para actualizar

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,10 +14,13 @@
         <div id="post">
             <h1>Este se el título atractivo e interesante del post</h1>
             <p>Y este es el p&aacute;rrafo con inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden lograr con ramas
-                <p><img src="images/image1.jpeg" width="100%" alt=""></p>
+                <p><img src="images/image1.jpg" width="100%" alt=""></p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mejor que ir a conferencias o salir en youtube. Excepto si eres un Rockstar. Pero estadísticamente no lo eres... por ahora.</p>
             </p>        
             <p>Suscríbete y dale like</p>
+        </div>
+        <div id="footer">
+            Hecho en Platzi
         </div>
     </div>
 
